# mini-ray-tracer

./: .gitmodules  CMakeLists.txt  Makefile  README.md  minirt.c
Google_test/: CMakeLists.txt  color_test.cpp  triangle_test.cpp  vectors_test.cpp
classes/ambient/: ambient_is_valid.c  del_ambient.c  new_ambient.c
classes/basic_functions/: check_coordinates.c  check_float.c  check_int.c  ft_float_between.c  ft_next.c
classes/camera/: camera_is_valid.c  new_camera.c
classes/cylinder/: cy_get_n.c  cy_solve.c  cylinder_is_valid.c  del_cylinder.c  new_cylinder.c
classes/dmlx/: create_window.c  put_image_to_bmp.c  put_image_to_win.c
classes/includes/: ambient.h  basic_structures.h  camera.h  cylinder.h  dmlx.h  light.h  plane.h  resolution.h  scene.h  sphere.h  square.h  triangle.h
classes/light/: del_light.c  new_light.c
classes/plane/: new_plane.c  pl_get_n.c  pl_solve.c
classes/resolution/: del_resolution.c  new_resolution.c  resolution_is_valid.c
classes/scene/: del_scene.c  get_active_camera.c  new_scene.c
classes/sphere/: del_sphere.c  get_n.c  new_sphere.c  solve.c  sp_get_n.c  sp_solve.c
classes/square/: del_square.c  new_square.c  sq_get_n.c  sq_solve.c
classes/triangle/: del_triangle.c  new_triangle.c  tr_get_n.c  tr_solve.c
events/: key_handler.c
exit/: ft_exit.c  ft_exit_invalid_descriptor.c  ft_exit_invalid_input.c  ft_exit_memerror.c  ft_exit_window_error.c
includes/: events.h  exit.h  func.h  minirt.h  parser.h  render.h
parser/: match.c  parser.c
render/: color_definition.c  get_diffuse.c  is_shadow_point.c  render.c  rotate.c  trace_ray.c
scene_tests/: castle.rt  cylinder.rt  empty.rt  plane.rt  room.rt  sphere.rt  square.rt  triangle.rt  valgrind.rt
src/: bright.c  color_copy.c  color_multi.c  color_sum.c  color_to_int.c  fbetween.c  maxf.c  module.c  normalize.c  rad_to_deg.c  ray_lim.c  ray_range.c  reverse_vec.c  set_lookat.c  set_point.c  set_vector.c  show_help.c  vaddition.c  vdot.c  vmulti.c  vprod.c  vsubtract.c
src/classes/ambient/: ambient_is_valid.c  new_ambient.c
src/classes/basic_functions/: check_color.c  check_coordinates.c  check_int.c  check_vector.c  ft_next.c
src/classes/camera/: del_camera.c  new_camera.c
src/classes/cylinder/: cy_get_n.c  cy_prepare.c  cy_solve.c  cylinder_is_valid.c  new_cylinder.c
src/classes/dmlx/: create_window.c  del_dmlx.c  new_dmlx.c  put_image_to_bmp.c
src/classes/includes/: ambient.h  basic_structures.h  camera.h  cylinder.h  dmlx.h  plane.h  scene.h  sphere.h  square.h  triangle.h
src/classes/light/: light_is_valid.c  new_light.c
src/classes/plane/: del_plane.c  new_plane.c  pl_get_n.c  pl_prepare.c  pl_solve.c  plane_is_valid.c
src/classes/resolution/: new_resolution.c
src/classes/scene/: del_scene.c  get_active_camera.c  get_d.c  new_scene.c  scene_prepare.c
src/classes/sphere/: new_sphere.c  sp_get_n.c  sp_prepare.c  sp_solve.c  sphere_is_valid.c
src/classes/square/: new_square.c  sq_get_n.c  sq_prepare.c  sq_solve.c  square_is_valid.c
src/classes/triangle/: new_triangle.c  tr_get_n.c  tr_prepare.c  tr_solve.c  triangle_is_valid.c
src/events/: close_handler.c  key_handler.c
src/exit/: ft_exit.c  ft_exit_invalid_descriptor.c  ft_exit_invalid_input.c  ft_exit_memerror.c  ft_exit_window_error.c
src/parser/: ft_dlstnew_gc.c  ft_lstnew_gc.c  match.c  parser.c  parser_error.c
src/render/: color_definition.c  get_diffuse.c  is_shadow_point.c  ray_lim.c  render.c  trace_ray.c
unit_tests/: CMakeLists.txt
